bu ikkinchi push

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <marquee behavior="" direction="">Salom bizning saytimizga xush kelibsiz !</marquee>
+    <hr>
     <h1>Hello World !</h1>
 </body>
 </html>
